--- a/overview/helloWorld/1.1-overview.md
+++ b/overview/helloWorld/1.1-overview.md
@@ -7,16 +7,20 @@ components of the iExec stack?
 
 ## 👷 What Problem Does iExec Solve?
 
-Let's keep it simple! Imagine you have some valuable data that you want to use or share, but you need to keep it private. This is where iExec comes in.
+Let's keep it simple! Imagine you have some valuable data that you want to use
+or share, but you need to keep it private. This is where iExec comes in.
 
 ### 🔒 The Two Key Parts
 
 #### 1. Protected Data
+
 - Your sensitive data is encrypted and stored safely
 - Only you control who can access it
-- Perfect for private information like research data, business analytics, or personal records
+- Perfect for private information like research data, business analytics, or
+  personal records
 
 #### 2. iExec Apps
+
 - Special applications that can work with your protected data
 - Run in secure environments (called TEEs) that keep your data private
 - Process your data without exposing it to anyone
@@ -24,6 +28,7 @@ Let's keep it simple! Imagine you have some valuable data that you want to use o
 ### 🤝 How They Work Together
 
 Think of it like a secure room:
+
 - Your protected data can only be "opened" inside this room
 - Only approved apps can enter the room
 - Everything that happens inside stays private
@@ -32,12 +37,14 @@ Think of it like a secure room:
 ### 💡 What You Can Build
 
 With iExec, you can create applications that:
+
 - Process sensitive data securely
 - Share data while keeping it private
 - Monetize data without exposing it
 - Run confidential computations
 
-It's that simple! Protected data + secure apps = private, useful computations. Ready to build something amazing?
+It's that simple! Protected data + secure apps = private, useful computations.
+Ready to build something amazing?
 
 :::
 
